--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -1,70 +1,80 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    {% block title %}
+    <title>Django Cart</title>
+    {% endblock %}
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 
-    <title>{% block title %} Welcome to the core app !! {% endblock %}</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
-  </head>
+    <!--Navbar Starts Here-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <body>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Products <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+            {% if user.is_authenticated %}
 
-  	<nav class="navbar navbar-default">
-        <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Lost & Found</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            {% block menu_bar %}
-            {% endblock menu_bar %}
-            <li><a href="#">About Us</a></li>
-        </ul>
-        <p class="navbar-text navbar-right">Signed in as <a href="#">{{ user.username}}</a></p>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{user.username}}
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">My Tasks</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Logout</a>
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0" action="#" method='GET'>
+                <input class="form-control mr-sm-2" type="search" name='q' aria-label="Search" placeholder='Search'
+                       value={{request.GET.q}}>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            {% else %}
+
+            <a class="btn btn-outline-secondary" href="#">Login</a>
+            <a class="btn btn-primary ml-2 mr-2" href="#">Register</a>
+
+            {% endif %}
         </div>
     </nav>
+    <!--Navbar Ends-->
+</head>
 
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-        	{% block sidebar %}
-            <h3>Recently found pets</h3>
-            <ul>
-                <li><a href="#">Pet1</a></li>
-                <li><a href="#">Pet1</a></li>
-                <li><a href="#">Pet1</a></li>
-                <li><a href="#">Pet1</a></li>
-                <li><a href="#">Pet1</a></li>
-                <li><a href="#">Pet1</a></li>
-                <li><a href="#">Pet1</a></li>
-            </ul>
-            {% endblock %}
-        </div>
-        <div class="col-md-9">
-        	{% block content %}
-            {% endblock %}
-        </div>
-      </div>
+<body>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
     </div>
-
-    <script src="{% static 'js/jquery.js' %}"></script>
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-  </body>
+</div>
+</body>
 </html>
