--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/gif" sizes="16x16">
     {% block title %}
     <title>Django Cart</title>
     {% endblock %}
