--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -26,7 +26,6 @@
 
     <!--Navbar Starts Here-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Products <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'products' %}">Products <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             {% if user.is_authenticated %}
@@ -75,7 +74,26 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+        <div class="col-sm-10 ">{% block content %}{% endblock %}
+
+            {% block pagination %}
+            {% if is_paginated %}
+            <div class="pagination">
+                        <span class="page-links">
+                            {% if page_obj.has_previous %}
+                                <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+                            {% endif %}
+                            <span class="page-current">
+                                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                            </span>
+                            {% if page_obj.has_next %}
+                                <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+                            {% endif %}
+                        </span>
+            </div>
+            {% endif %}
+            {% endblock %}
+        </div>
     </div>
 </div>
 </body>
