--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -51,7 +51,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">My Tasks</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Logout</a>
+                        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                     </div>
                 </li>
             </ul>
@@ -62,7 +62,7 @@
             </form>
             {% else %}
 
-            <a class="btn btn-outline-secondary" href="#">Login</a>
+            <a class="btn btn-outline-secondary" href="{% url 'login' %}">Login</a>
             <a class="btn btn-primary ml-2 mr-2" href="#">Register</a>
 
             {% endif %}
