adds registration view

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -63,7 +63,7 @@
             {% else %}
 
             <a class="btn btn-outline-secondary" href="{% url 'login' %}">Login</a>
-            <a class="btn btn-primary ml-2 mr-2" href="#">Register</a>
+            <a class="btn btn-primary ml-2 mr-2" href="{% url 'register' %}">Register</a>
 
             {% endif %}
         </div>
