--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -10,9 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
             integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
             crossorigin="anonymous"></script>
@@ -22,6 +20,7 @@
 
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <script src="{% static 'js/django-cart.js' %}"></script>
 
 
     <!--Navbar Starts Here-->
@@ -66,6 +65,13 @@
             <a class="btn btn-primary ml-2 mr-2" href="{% url 'register' %}">Register</a>
 
             {% endif %}
+            <ul class="navbar-nav">
+                <li class="nav-item" id="cart" data-id="{{ cart_id }}">
+                    <a href="/checkout/cart" class="btn menu-btn">
+                        Cart
+                        <span class="badge badge-danger" id="cart-quantity">{{ cart_count }}</span></a>
+                </li>
+            </ul>
         </div>
     </nav>
     <!--Navbar Ends-->
