--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -78,9 +78,12 @@
 </head>
 
 <body>
+<form id="form">
+    {% csrf_token %}
+</form>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-10 ">{% block content %}{% endblock %}
+        <div class="col-sm-10 product-wrapper">{% block content %}{% endblock %}
 
             {% block pagination %}
             {% if is_paginated %}
