--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -24,7 +24,7 @@
 
 
     <!--Navbar Starts Here-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white mb-4">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -83,7 +83,9 @@
 </form>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-10 product-wrapper">{% block content %}{% endblock %}
+        <div class="container">
+            {% block content %}
+            {% endblock %}
 
             {% block pagination %}
             {% if is_paginated %}
