--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>All Products</h2>
 {% if product_list %}
-<div class="row">
+<div class="row justify-content-md-center">
     {% for product in product_list %}
-    <div class="col-6 col-md-4">
-        <div class="thumbnail">
+    <div class="col-lg-3 bg-white margin-15 padding-zero">
+        {% load static %}
+        <img class="thumbnail" src="{% static 'images/placeholder.png' %}" width="100%"/>
+        <div class="box-element">
             <a href="{{ product.get_absolute_url }}">
-                <img class="img-fluid" src="https://pcbonlineshop.com/var/photo/product/2000x4000/4/176/4.jpg"/>
-                <h5 class="text-center top-pad-10">{{ product.name }}</h5>
-                <h6 class="text-center top-pad-10">{{ product.price }}</h6>
+                <h6 class="align-self-center"><strong>{{ product.name }}</strong></h6>
             </a>
-            <p class="text-center">
-                <a class="btn btn-primary add-to-cart" role="button" data-id="{{ product.id }}">Add to cart</a>
-            </p>
+            <hr class="margin-5">
+            <a class="btn btn-primary add-to-cart" data-id="{{ product.id }}">Add to cart</a>
+            <h4 class="product-price">₹{{ product.price }}</h4>
+
         </div>
     </div>
     {% endfor %}
