--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -3,15 +3,15 @@
 <h2>Cart Items</h2>
 {% if cartitem_list %}
 <div class="row">
-    <div class="col-lg-12 bg-white box-element">
+    <div class="col-lg-12 bg-white box-element shadow-sm">
         <div class="row">
             <div class="col-lg-4 align-self-center"><h6>My Cart({{ cart_count }} items)</h6></div>
             <div class="col-lg-4 align-self-center">Total: {{ cart_total }}</div>
-            <div class="col-lg-4 align-self-center"><a class="float-right btn btn-outline-success">Checkout</a></div>
+            <div class="col-lg-4 align-self-center"><a href="{% url 'checkout' %}" class="float-right btn btn-outline-success">Checkout</a></div>
         </div>
     </div>
     {% for cartitem in cartitem_list %}
-    <div class="row h-200 margin-5 bg-white">
+    <div class="row h-200 margin-5 bg-white shadow-sm">
         <div class="col-4 col-md-3 padding-zero align-self-center" height="100%">
             {% load static %}
             <img class="img-fluid" src="{% static 'images/placeholder.png' %}" height="100%">
