--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -1,32 +1,35 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Cart Items</h2>
-{% if cartitem_list %}
+{% if cart_items %}
 <div class="row">
     <div class="col-lg-12 bg-white box-element shadow-sm">
         <div class="row">
-            <div class="col-lg-4 align-self-center"><h6>My Cart({{ cart_count }} items)</h6></div>
-            <div class="col-lg-4 align-self-center">Total: {{ cart_total }}</div>
+            <div class="col-lg-4 align-self-center"><h6>My Cart({{ order.get_total_quantity }} items)</h6></div>
+            <div class="col-lg-4 align-self-center">Total: ₹{{ order.get_total_price|floatformat:2 }}</div>
             <div class="col-lg-4 align-self-center"><a href="{% url 'checkout' %}" class="float-right btn btn-outline-success">Checkout</a></div>
         </div>
     </div>
-    {% for cartitem in cartitem_list %}
-    <div class="row h-200 margin-5 bg-white shadow-sm">
-        <div class="col-4 col-md-3 padding-zero align-self-center" height="100%">
-            {% load static %}
-            <img class="img-fluid" src="{% static 'images/placeholder.png' %}" height="100%">
-        </div>
-        <div class="col-8 col-md-9">
+    {% for cart_item in cart_items %}
+    <div class="col-lg-12 h-200 margin-5 bg-white shadow-sm" width="100%">
+        <div class="row">
+
+            <div class="col-4 col-md-3 padding-zero align-self-center">
+                <center>
+                    <img class="img-fluid size-100" src="{{ cart_item.product.image.url }}">
+                </center>
+            </div>
+            <div class="col-8 col-md-9">
             <div class="row">
                 <div class="col-12 mt-md-4">
-                    <h6><a href="{{ cartitem.get_absolute_url }}">{{ cartitem.get_name }}</a></h6>
+                    <h6><a href="{{ cart_item.product.get_absolute_url }}">{{ cart_item.product.name }}</a></h6>
                 </div>
                 <div class="col-12 col-md-6 mb-2">
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <button class="btn btn-primary" type="button">-</button>
                         </div>
-                        <input type="number" class="form-control text-center" value="{{ cartitem.quantity }}">
+                        <input type="number" class="form-control text-center" value="{{ cart_item.quantity }}">
                         <div class="input-group-append">
                             <button class="btn btn-primary" type="button">+</button>
                         </div>
@@ -36,9 +39,10 @@
                     <button class="btn btn-danger" type="button">Delete</button>
                 </div>
                 <div class="col-8 col-md-4 align-self-center text-right">
-                    <strong class="my-auto">₹ {{ cartitem.get_price }}</strong>
+                    <strong class="my-auto">₹ {{ cart_item.get_total_price|floatformat:2 }}</strong>
                 </div>
             </div>
+        </div>
         </div>
     </div>
     {% endfor %}
