--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -66,10 +66,10 @@
 
             {% endif %}
             <ul class="navbar-nav">
-                <li class="nav-item" id="cart" data-id="{{ cart_id }}">
+                <li class="nav-item" id="cart">
                     <a href="{% url 'cart_details' %}" class="btn menu-btn">
                         Cart
-                        <span class="badge badge-danger" id="cart-quantity">{{ cart_count }}</span></a>
+                        <span class="badge badge-danger" id="cart-quantity">{{ order.get_total_quantity }}</span></a>
                 </li>
             </ul>
         </div>
