--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -4,6 +4,7 @@
 	<div class="col-lg-6">
 		<div class="box-element shadow-sm bg-white" id="form-wrapper">
             <form id="ship-form">
+                {% csrf_token %}
                 <div id="user-info">
                     <div class="form-field">
                         <input required class="form-control" type="text" name="name" placeholder="Name..">
@@ -37,6 +38,7 @@
 		</div>
         <div class="box-element" id="payment-info">
             <small>Paypal Options</small>
+            <button id="make-payment">Make Payment</button>
         </div>
 	</div>
 
@@ -75,6 +77,11 @@ $(document).ready(function() {
         $(this).hide()
         $("#payment-info").show()
     });
+    if (user != 'AnonymousUser'){
+        $("#user-info").html('')
+    }
+    total = {{ order.get_total_price }}
+
 });
 </script>
 
