--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -16,7 +16,7 @@
 
             <div class="col-4 col-md-3 padding-zero align-self-center">
                 <center>
-                    <img class="img-fluid size-100" src="{{ cart_item.product.image.url }}">
+                    <img class="img-fluid size-100" src="{{ cart_item.product.image_url }}">
                 </center>
             </div>
             <div class="col-8 col-md-9">
