--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -49,7 +49,7 @@
 		{% for cart_item in cart_items %}
         <div class="row h-200 margin-5 bg-white shadow-sm">
             <div class="col-4 col-md-3 padding-zero align-self-center" height="100%">
-                <img class="img-fluid size-100" src="{{ cart_item.product.image.url }}" height="100%">
+                <img class="img-fluid size-100" src="{{ cart_item.product.image_url }}" height="100%">
             </div>
             <div class="col-8 col-md-9">
                 <div class="row box-element">
@@ -68,21 +68,4 @@
         {% endfor %}
 	</div>
 </div>
-<script type="text/javascript">
-$(document).ready(function() {
-            //option A
-    $("#payment-info").hide()
-    $("#form-wrapper").submit(function(e){
-        e.preventDefault(e);
-        $(this).hide()
-        $("#payment-info").show()
-    });
-    if (user != 'AnonymousUser'){
-        $("#user-info").html('')
-    }
-    total = {{ order.get_total_price }}
-
-});
-</script>
-
 {% endblock content%}
