--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -73,7 +73,7 @@
 
             {% endif %}
             <ul class="navbar-nav">
-                <li class="nav-item" id="cart">
+                <li class="nav-item" id="cart-info">
                     <a href="{% url 'cart_details' %}" class="btn menu-btn">
                         Cart
                         <span class="badge badge-danger" id="cart-quantity">{{ order.get_total_quantity }}</span></a>
