--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -38,7 +38,7 @@
 		</div>
         <div class="box-element" id="payment-info">
             <small>Paypal Options</small>
-            <button id="make-payment">Make Payment</button>
+            <div id="paypal-button-container"></div>
         </div>
 	</div>
 
@@ -68,4 +68,35 @@
         {% endfor %}
 	</div>
 </div>
+<script src="https://www.paypal.com/sdk/js?client-id=AWZ4ubtKaEVkpVhmjKkiF-IMBtOO3uIrpKQq0nlzrQQylcxOuSu846EUlrB4f6V_IR6C0a9aCR8SF6f2&currency=USD"></script>
+<script>
+        var total = '{{ order.get_total_price }}'
+        paypal.Buttons({
+            style: {
+                    color:  'blue',
+                    shape:  'pill',
+                    label:  'pay',
+                    height: 40
+            },
+
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: parseFloat(total).toFixed(2)
+                        }
+                    }]
+                });
+            },
+
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(details) {
+                    sendOrderData()
+<!--                        alert('Complete')-->
+                });
+            }
+
+
+        }).render('#paypal-button-container');
+</script>
 {% endblock content%}
