--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -35,9 +35,9 @@ body {
 
 .product-price{
     display:inline-block;
-    float: right;
     margin-top:auto;
     margin-bottom: auto;
+    font-size: 16px;
 }
 
 .float-right{
@@ -56,4 +56,9 @@ body {
 .size-100{
     width: 100px;
     height: 100px;
+}
+
+.add-to-cart{
+    margin: 0px;
+    width: 100%;
 }
