--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'products' %}">Products <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'products' %}">Categories <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             {% if user.is_authenticated %}
@@ -55,7 +55,7 @@
                         {{user.username}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">My Tasks</a>
+                        <a class="dropdown-item" href="#">My Orders</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                     </div>
