--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -42,9 +42,22 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'products' %}">Categories <span class="sr-only">(current)</span></a>
+                {% if categories_list %}
+                <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" href="#" id="categories-nav-bar" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Categories
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        {% for category in categories_list %}
+                        <a class="dropdown-item" href="{{ category.get_absolute_url }}">{{ category.name}}</a>
+                        <div class="dropdown-divider"></div>
+                        {% endfor %}
+                    </div>
                 </li>
+            </ul>
+                {% endif %}
             </ul>
             {% if user.is_authenticated %}
 
