--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -66,3 +66,11 @@ body {
 .category{
     padding: 10px;
 }
+.orders-heading{
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.order-list{
+    margin-bottom: 10px;
+}
