--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -68,7 +68,7 @@
                         {{user.username}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">My Orders</a>
+                        <a class="dropdown-item" href="{% url 'orders' %}">My Orders</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                     </div>
