--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,10 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h3>Title: {{ product.name }}</h3>
-
-  <p><strong>Category:</strong> <a href="">{{ product.category }}</a></p>
-  <p><strong>Description:</strong> {{ product.description }}</p>
-  <p><strong>Price:</strong> {{ product.price }}</p>
+  <div class="row justify-content-md-center padding-30">
+        <div class="col-lg-4 margin-15">
+                <div>
+                    <img class="thumbnail" src="{{ product.image_url }}" width="100%">
+                </div>
+        </div>
+        <div class="col-lg-4 margin-15">
+            <div class="row">
+                <h3 class="col-lg-12 product-title text-truncate margin-5">{{ product.name }}</h3>
+                <h4 class="col-lg-12 product-price margin-5">₹{{ product.price }}</h4>
+                <div class="col-lg-12 margin-5">
+                    <button class="btn btn-primary btn-block add-to-cart" type="button" data-product-id="{{ product.id }}">Add to cart</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
