--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -10,11 +10,14 @@
         <div class="col-lg-4 margin-15">
             <div class="row">
                 <h3 class="col-lg-12 product-title text-truncate margin-5">{{ product.name }}</h3>
-                <h4 class="col-lg-12 product-price margin-5">₹{{ product.price }}</h4>
-                <div class="col-lg-12 margin-5">
-                    <button class="btn btn-primary btn-block add-to-cart" type="button" data-product-id="{{ product.id }}">Add to cart</button>
+                <h3 class="col-lg-12 margin-top-10 text-secondary">
+                    <small>₹{{ product.price }}</small>
+                </h3>
+                <div class="col-lg-12 margin-top-20">
+                    <button class="btn btn-outline-danger add-to-cart" type="button" data-product-id="{{ product.id }}">Add to cart</button>
                 </div>
-            </div>
+                <p class="col-lg-12 margin-top-20 text-justify">{{ product.description }}</p>
+                </div>
         </div>
     </div>
 
