--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -74,11 +74,11 @@
                     </div>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0" action="#" method='GET'>
-                <input class="form-control mr-sm-2" type="search" name='q' aria-label="Search" placeholder='Search'
-                       value={{request.GET.q}}>
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+<!--            <form class="form-inline my-2 my-lg-0" action="#" method='GET'>-->
+<!--                <input class="form-control mr-sm-2" type="search" name='q' aria-label="Search" placeholder='Search'-->
+<!--                       value={{request.GET.q}}>-->
+<!--                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+<!--            </form>-->
             {% else %}
 
             <a class="btn btn-outline-secondary" href="{% url 'login' %}">Login</a>
